<resources>
    <string name="app_name">Game Master\'s Essentials Kit</string>
    <string name="d2">d2</string>
    <string name="qty">0</string>
    <string name="d4">d4</string>
    <string name="d6">d6</string>
    <string name="d8">d8</string>
    <string name="d20">d20</string>
    <string name="d100">d100</string>
    <string name="roll">Roll</string>
    <string name="d2result">d2Result</string>
    <string name="d4result">d4Result</string>
    <string name="d6result">d6Result</string>
    <string name="d8result">d8Result</string>
    <string name="d10result">d10Result</string>
    <string name="d12result">d12Result</string>
    <string name="d20result">d20Result</string>
    <string name="d100result">d100Result</string>
    <string name="d10">d10</string>
    <string name="d12">d12</string>
    <string name="d2resultsview">Total :</string>
    <string name="d4resultsview">Total :</string>
    <string name="d6resultsview">Total :</string>
    <string name="d8resultsview">Total :</string>
    <string name="d10resultsview">Total :</string>
    <string name="d12resultsview">Total :</string>
    <string name="d20resultsview">Total :</string>
    <string name="d100resultsview">Total :</string>
    <string name="allresultsview">Total :</string>
    <string name="dice_roller">Dice Roller</string>
    <string name="gm_logo">GM Logo</string>
    <string name="channel_name">GM Kit</string>
    <string name="monster_list">Monster List</string>
    <string name="monster">monster</string>
</resources>
