<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DiceRollerViewFragment"
>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/d2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d2" android:layout_weight="1"/>
            <EditText
                    android:text="@string/qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d2EditTextBox" android:layout_weight="1"
                    android:inputType="number"/>
            <TextView
                    android:text="@string/d2resultsview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d2ResultsView" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/d4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d4" android:layout_weight="1"/>
            <EditText
                    android:text="@string/qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d4EditTextBox" android:layout_weight="1"
                    android:inputType="number" />
            <TextView
                    android:text="@string/d4resultsview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d4ResultsView" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/d6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/d6" android:layout_weight="1"/>
        <EditText
                android:text="@string/qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/d6EditTextBox" android:layout_weight="1"
                android:inputType="number" />
            <TextView
                    android:text="@string/d6resultsview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d6ResultsView" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/d8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d8" android:layout_weight="1"/>
            <EditText
                    android:text="@string/qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d8EditTextBox" android:layout_weight="1"
                    android:inputType="number" />
            <TextView
                    android:text="@string/d8resultsview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d8ResultsView" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/d10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d10" android:layout_weight="1"/>
            <EditText
                    android:text="@string/qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d10EditTextBox" android:layout_weight="1"
                    android:inputType="number"/>
            <TextView
                    android:text="@string/d10resultsview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d10ResultsView" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/d12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d12" android:layout_weight="1"/>
            <EditText
                    android:text="@string/qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d12EditTextBox" android:layout_weight="1"
                    android:inputType="number" />
            <TextView
                    android:text="@string/d12resultsview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d12ResultsView" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/d20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d20" android:layout_weight="1"/>
            <EditText
                    android:text="@string/qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d20EditTextBox" android:layout_weight="1"
                    android:inputType="number" />
            <TextView
                    android:text="@string/d20resultsview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d20ResultsView" android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/d100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d100" android:layout_weight="1"/>
            <EditText
                    android:text="@string/qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d100EditTextBox" android:layout_weight="1"
                    android:inputType="number" />
            <TextView
                    android:text="@string/d100resultsview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/d100ResultsView" android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button android:theme="@style/CustomButtonTheme"
                    android:text="@string/roll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/rollButton" android:layout_weight="1"/>


            <TextView
                    android:text="@string/allresultsview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/allResultsView" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/diceRollerFragmentView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/dice_list_layout"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>