<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/imageView"
            app:srcCompat="@drawable/gm" android:contentDescription="@string/gm_logo"/>
    <Button
            android:theme="@style/CustomButtonTheme"
            android:text="@string/dice_roller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/diceRollerButton"/>
    <Button
            android:text="@string/monster_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/monsterListButton"/>
</LinearLayout>